# docs_updater

./: .gitignore  README.md  pyproject.toml
docs_updater/: cli.py  prompts.py
