[tool.poetry]
name = "docs-updater"
version = "0.2.0"
description = "Update document from git diff powered by ChatGPT"
authors = ["Yudai Hayashi <yudai0913haya@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "docs_updater" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
click = "^8.1.3"
langchain = "^0.0.329"
openai = "^0.28.1"
colored = "^1.4.4"
loguru = "^0.7.2"
python-dotenv = "^1.0.0"
gitpython = "^3.1.40"
tiktoken = "^0.5.1"
chromadb = "^0.4.15"

[tool.poetry.scripts]
dupdate = "docs_updater.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
